# kubevirt-benchmark

./: .gitignore  .pre-commit-config.yaml  BOOT_STORM_GUIDE.md  CLEANUP_GUIDE.md  CLI_README.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  TEMPLATE_GUIDE.md  VALIDATION_GUIDE.md  go.mod  install.sh  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  test_cleanup.py
.github/: CODEOWNERS
.site/: sitemap.xml
.site/search/: search_index.json
capacity-benchmark/: README.md  measure-capacity.py
chaos-benchmark/: measure-chaos.py
cmd/virtbench/: capacity_benchmark.go  common.go  datasource_clone.go  failure_recovery.go  migration.go  root.go  validate_cluster.go  version.go
dashboard/: README.md  cluster_info.yaml  generate_dashboard.py  manual_results.yaml
datasource-clone/: generate_dashboard.py  measure-vm-creation-time.py
disk-ops-benchmark/: measure-disk-ops.py
docs/: index.md  install.md  release-notes.md
docs/community/: code-of-conduct.md  contributing.md  index.md  support.md
docs/reference/: best-practices.md  troubleshooting.md
docs/reference/user-guide/: boot-storm-guide.md  cleanup-guide.md  configuration.md  output-and-results.md  repository-structure.md  results-dashboard.md  vm-template-guide.md
docs/reference/user-guide/test-scenarios/: boot-storm.md  capacity-benchmark.md  chaos-benchmark.md  cluster-validation.md  datasource-clone.md  disk-ops-benchmark.md  elbencho-benchmark.md  failure-recovery.md  fio-benchmark.md  migration.md  overview.md
docs/reference/user-guide/test-scenarios/vm-ops/: drain-nodes.md  overview.md  power-toggle-vms.md  rebalance-vms.md  run-blkdiscard.md  vm-snapshot.md
docs/stylesheets/: extra.css
examples/: evacuation-scenario.sh  parallel-migration.sh  round-robin-migration.sh  sequential-migration.sh  ssh-pod.yaml
examples/benchmarks/: fio-benchmark-vm.yaml
examples/scripts/: evacuation-scenario.sh  parallel-migration.sh  round-robin-migration.sh  sequential-migration.sh
examples/utilities/: ssh-pod.yaml
examples/vm-templates/: fio-vm-template.yaml  rhel9-vm-datasource.yaml  rhel9-vm-registry.yaml  vm-template.yaml
failure-recovery/: far-template.yaml  measure-recovery-time.py  patch-vms.sh  recovery-test.py  run-far-test.sh  run-manual-failure-test.sh
fio-benchmark/: measure-fio-performance.py
io-benchmark/elbencho/: measure-elbencho-performance.py
io-benchmark/fio/: measure-fio-performance.py
migration/: measure-vm-migration-time.py
utils/: __init__.py  apply_template.sh  common.py  replace-storage-class.sh  validate_cluster.py
virtbench/: __init__.py  cli.py  common.py
virtbench/commands/: __init__.py  capacity.py  chaos.py  datasource_clone.py  disk_ops.py  elbencho.py  failure_recovery.py  fio.py  migration.py  validate.py  version.py  vm_ops.py
virtbench/utils/: __init__.py  yaml_modifier.py
vm-ops/: drain-nodes.py  power-toggle-vms.py  rebalance-vms.py  run-blkdiscard.py  snapshot-vms.py
